# ArlekinClient

./: LICENSE  README.md
backend/: Cargo.toml  build.rs
backend/src/: main.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: app.rs  app_me.rs  app_status_bar.rs  main.rs  navigator.rs  notifier.rs  route.rs
frontend/src/account/: load_user.rs  login.rs  mod.rs
frontend/src/account/friends_views/: add_friend.rs  friend_requests.rs  friends.rs  friends_list.rs  mod.rs
frontend/src/api/: mod.rs
frontend/src/channel_views/: channel.rs  channel_content.rs  channel_message.rs  channel_message_error.rs  mod.rs
frontend/src/common/: mod.rs  threading.rs
frontend/src/direct_messages_views/: direct_channels.rs  direct_messages.rs  encryption.rs  encryption_error.rs  mod.rs  notifier_process.rs
frontend/src/helpers/: element.rs  file.rs  input.rs  mod.rs  prelude.rs  status.rs  webpage.rs
frontend/src/localization/: language.rs  mod.rs
frontend/src/settings_views/: settings.rs
frontend/static/css/: app.css  main.css
frontend/static/css/account/: friends.css  login.css
frontend/static/css/channel_views/: channel.css
frontend/static/css/settings_views/: settings.css
frontend/static/localization/languages/: en-US.json
frontend/static/themes/: default.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
