[package]
name = "arlekin_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-cell = "0.3.3"
once_cell = "1.17.1"
gloo-net = "0.2"
serde = "1.0.158"
serde_json = "1.0.94"
wasm-bindgen = "0.2.84"
yew = { version = "0.20.0", features = ["csr"] }
web-sys = "0.3.61"
wasm-logger = "0.2.0"
log = "0.4.17"
argon2 = "0.5.0"
serde-wasm-bindgen = "0.5.0"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
wasm-bindgen-futures = "0.4.34"
getrandom = { version = "0.2", features = ["js"] }
