[package]
name = "arlekin_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-cell = "0.3.3"
once_cell = "1.17.1"
gloo-net = "0.2"
serde = "1.0.158"
serde_json = "1.0.94"
wasm-bindgen = "0.2.84"
yew = { version = "0.20.0", features = ["csr"] }
web-sys = { version = "0.3.61", features = ["Crypto", "SubtleCrypto", "CryptoKeyPair", "CryptoKey"] }
wasm-logger = "0.2.0"
log = "0.4.17"
argon2 = "0.5.0"
serde-wasm-bindgen = "0.5.0"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
wasm-bindgen-futures = "0.4.34"
getrandom = { version = "0.2", features = ["js"] }
yew-router = "0.17.0"
serde_repr = "0.1.12"
const_format = "0.2.30"
js-sys = "0.3.61"
md5 = "0.7.0"
lru = "0.10.0"
lazy_static = "1.4.0"
base64 = "0.21.0"

[profile.dev.package.argon2]
opt-level = 3

[profile.dev.package.base64ct]
opt-level = 3

[profile.dev.package.blake2]
opt-level = 3

[profile.dev.package.password-hash]
opt-level = 3
